Scum-129
Finalización del response a la hora de hacer login.
